# rhai-ml

./: Cargo.toml  README.md  build.rs
src/: lib.rs  train_and_predict.rs
tests/: rhai-ml-tests.rs
